--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,7 @@ apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "29.0.3"
-
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId 'com.mahmoudalim.mvvmnewsapp'
@@ -19,6 +18,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    buildFeatures {
+        viewBinding true
+    }
     buildTypes {
         release {
             minifyEnabled false
