No internet Checking
safeCall methods added for getBreakingNEws and SearchNews in ViewModel and added an APPLICATION Class to get the context in the view model, add a toast meassage with the occured error in both Fragments in case of network or other error

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,8 @@ dependencies {
 
     //xabaras - RecyclerViewSwipeDecorator
     implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.3'
+
+    // toasty
+    implementation 'com.github.GrenderG:Toasty:1.5.0'
+
 }
