--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.mahmoudalim.mvvmnewsapp">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -9,10 +10,12 @@
         android:name=".util.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
+        android:usesCleartextTraffic="true"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NewsApp">
+        android:theme="@style/Theme.NewsApp"
+        tools:targetApi="m">
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
